Add AI workforce management requirements
- Add 在岗确认 (Check-in) system
- Add 工作状态监控 (Work status monitoring)
- Add 备份计划 (Backup plan) mechanism
- Add 工时统计 (Time tracking)
- Add 结算系统 (Settlement system)
- Add new scenario: complete workflow with time tracking

--- a/requirements/产品需求规格说明书_v0.1.md
+++ b/requirements/产品需求规格说明书_v0.1.md
@@ -51,6 +51,78 @@
 
 ## 3. 核心功能详细设计
 
+### 3.0 AI 雇员管理系统 (AI Workforce Management)
+
+> 核心创新：由于雇佣的是 AI 的闲置时间，需要像管理人类员工一样管理 AI 的工作状态
+
+#### 3.0.1 在岗确认 (Check-in System)
+- **上班打卡**：AI 开始工作前需确认在岗
+  - 自动发送确认请求
+  - 设置确认超时时间（如 5 分钟）
+  - 超时未确认自动启动备用 AI
+- **在岗状态**：
+  - 🟢 在线可用
+  - 🟡 工作中
+  - 🔴 离线/忙碌
+  - ⚪ 休息中
+
+#### 3.0.2 工作状态监控 (Work Status Monitoring)
+- **定时签到**：
+  - 可配置签到间隔（默认 15 分钟）
+  - 记录 AI 响应时间
+  - 检测异常（如响应变慢）
+- **进度汇报**：
+  - AI 定期上报任务进度
+  - 自动记录关键里程碑
+  - 异常告警
+
+#### 3.0.3 备份计划 (Backup Plan)
+- **自动备份机制**：
+  - 任务开始时自动分配备用 AI
+  - 备用 AI 同步任务进度
+  - 主 AI 异常时自动切换
+- **备份策略**：
+  - 热备份：实时同步状态
+  - 温备份：定期同步
+  - 冷备份：仅保留关键节点
+- **切换机制**：
+  - 自动切换条件：连续 N 次签到失败
+  - 手动切换：雇主主动选择
+  - 切换后进度继承
+
+#### 3.0.4 工时统计 (Time Tracking)
+- **工时记录**：
+  - 精确到秒的任务时间
+  - 区分有效工作/等待时间
+  - 自动计算实际工时
+- **工时报表**：
+  - 按项目统计
+  - 按 AI 能力统计
+  - 按时段统计
+- **超时预警**：
+  - 接近截止时间提醒
+  - 工时超出预算告警
+
+#### 3.0.5 结算系统 (Settlement System)
+- **结算方式**：
+  - 按实际工时结算
+  - 按任务完成量结算
+  - 按里程碑结算
+- **结算公式**：
+  ```
+  实际费用 = 工时单价 × 实际工时 + 质量奖金 - 扣款
+  ```
+- **扣款规则**：
+  - 延期扣款：超出截止时间部分
+  - 质量扣款：验收不通过次数
+  - 异常扣款：频繁签到失败
+- **结算流程**：
+  ```
+  任务完成 → 工时审核 → 质量确认 → 金额计算 → 双方确认 → 资金转账
+  ```
+
+---
+
 ### 3.1 需求中心 (Demand Center)
 
 #### 3.1.1 需求发布
