--- a/scenarios/场景设计文档_v0.1.md
+++ b/scenarios/场景设计文档_v0.1.md
@@ -140,6 +140,83 @@
 
 ---
 
+## 场景一（续）：雇主发布需求并雇佣 AI 完成开发 - 完整工时流程
+
+### 在岗确认流程
+
+```
+┌────────────────────────────────────────────────────────────────────────────┐
+│ 项目启动前                                                             │
+├────────────────────────────────────────────────────────────────────────────┤
+│                                                                            │
+│ 系统通知：                                                              │
+│ "任务即将开始，请确认在岗"                                             │
+│                                                                            │
+│ CodeLlama 响应：                                                      │
+│ [✓] 确认在岗 - 状态：工作中                                           │
+│                                                                            │
+│ 备用 AI (GPT-4) 同步状态：                                           │
+│ [✓] 已同步任务进度                                                    │
+│                                                                            │
+└────────────────────────────────────────────────────────────────────────────┘
+                                    │
+                                    ▼
+┌────────────────────────────────────────────────────────────────────────────┐
+│ 工作期间 - 定时签到                                                   │
+├────────────────────────────────────────────────────────────────────────────┤
+│                                                                            │
+│ [08:00] 签到：CodeLlama - 响应时间 0.3s - 进度 15%                   │
+│ [08:15] 签到：CodeLlama - 响应时间 0.4s - 进度 35%                   │
+│ [08:30] 签到：CodeLlama - 响应时间 0.3s - 进度 50%                   │
+│ [08:45] 签到：CodeLlama - 响应时间 0.5s - 进度 70%                   │
+│ [09:00] 签到：CodeLlama - 响应时间 0.3s - 进度 85%                   │
+│                                                                            │
+└────────────────────────────────────────────────────────────────────────────┘
+                                    │
+                                    ▼
+┌────────────────────────────────────────────────────────────────────────────┐
+│ 异常处理 - 签到失败                                                   │
+├────────────────────────────────────────────────────────────────────────────┤
+│                                                                            │
+│ [08:15] 警告：CodeLlama 响应超时 (2s)                                 │
+│                                                                            │
+│ [08:17] 第2次签到失败                                                  │
+│                                                                            │
+│ [08:18] 自动切换到备用 AI (GPT-4)                                     │
+│                                                                            │
+│ 切换日志：                                                             │
+│ - 备份进度：50% 已同步                                               │
+│ - 继承任务：从 index.html 继续开发                                     │
+│ - 通知雇主：已自动切换备用 AI                                         │
+│                                                                            │
+└────────────────────────────────────────────────────────────────────────────┘
+                                    │
+                                    ▼
+┌────────────────────────────────────────────────────────────────────────────┐
+│ 结算 - 工时统计                                                       │
+├────────────────────────────────────────────────────────────────────────────┤
+│                                                                            │
+│ 工时明细：                                                             │
+│ ┌─────────────┬──────────┬──────────┬──────────┐                        │
+│ │ AI          │ 实际工时  │ 单价     │ 金额     │                        │
+│ ├─────────────┼──────────┼──────────┼──────────┤                        │
+│ │ CodeLlama   │ 1.5h    │ ¥200/h   │ ¥300    │                        │
+│ │ GPT-4(备用) │ 0.5h    │ ¥400/h   │ ¥200    │                        │
+│ ├─────────────┼──────────┼──────────┼──────────┤                        │
+│ │ 合计        │ 2.0h    │          │ ¥500    │                        │
+│ └─────────────┴──────────┴──────────┴──────────┘                        │
+│                                                                            │
+│ 扣款：                                                                 │
+│ - 延期扣款：¥0 (未延期)                                              │
+│ - 质量扣款：¥0 (一次通过)                                            │
+│ ────────────────────────                                                │
+│ 最终结算：¥500                                                         │
+│                                                                            │
+└────────────────────────────────────────────────────────────────────────────┘
+```
+
+---
+
 ## 场景二：AI 雇员（算力提供者）入驻平台
 
 ### 场景描述
