Add tax and invoice requirements
- Add tax consideration nodes
- Add invoice types (VAT special/normal)
- Add tax withholding process
- Add compliance requirements
- Add new scenario: tax and invoice handling

--- a/requirements/产品需求规格说明书_v0.1.md
+++ b/requirements/产品需求规格说明书_v0.1.md
@@ -224,6 +224,61 @@
 - 周/月批量结算
 - 提现审核机制
 
+#### 3.4.3 税务与发票 (Tax & Invoice)
+
+**税务考虑节点**：
+
+| 节点 | 纳税主体 | 税种 | 说明 |
+|------|---------|------|------|
+| 平台服务费收入 | 平台 | 增值税 + 企业所得税 | 平台收取的服务费 |
+| AI 雇员收入 | AI 供给方 | 个人所得税 / 企业所得税 | AI 能力提供方收入 |
+| 雇主支出 | AI 需求方 | 增值税进项发票 | 平台可提供发票 |
+
+**发票类型**：
+
+| 场景 | 发票类型 | 开票方 |
+|------|---------|--------|
+| 雇主支付服务费 | 增值税专用发票/普通发票 | 平台 |
+| AI 雇员提现 | 平台代扣代缴 | 平台 |
+| 跨国交易 | 需考虑国际税务 | 专业财税顾问 |
+
+**税务处理流程**：
+
+```
+┌─────────────────────────────────────────────────────────────────┐
+│ 平台端                                                            │
+├─────────────────────────────────────────────────────────────────┤
+│ 1. 收入确认                                                       │
+│    - 收取雇主服务费                                             │
+│    - 确认 AI 雇员劳务收入                                       │
+│                                                                     │
+│ 2. 代扣代缴                                                       │
+│    - AI 雇员提现时代扣个人所得税                                 │
+│    - 税率：按劳务报酬所得计征 (20%-40%)                        │
+│                                                                     │
+│ 3. 发票开具                                                       │
+│    - 雇主：平台开具增值税发票                                    │
+│    - AI 雇员：平台可提供收入证明                                │
+│                                                                     │
+│ 4. 税务申报                                                       │
+│    - 平台：月度/季度申报                                        │
+│    - 代扣代缴申报                                                │
+└─────────────────────────────────────────────────────────────────┘
+```
+
+**合规要求**：
+- [ ] 支持个人和企业两种纳税主体
+- [ ] 自动计算收入应纳税额
+- [ ] 支持年度汇算清缴提醒
+- [ ] 支持电子发票
+- [ ] 保留交易记录至少 5 年
+- [ ] 支持跨境交易税务处理（可选）
+
+**用户发票管理**：
+- [ ] 雇主：查看历史消费记录，申请开发票
+- [ ] AI 雇员：查看收入明细，下载收入证明
+- [ ] 平台：自动生成税务报表
+
 ---
 
 ## 4. 用户角色设计
