--- a/scenarios/场景设计文档_v0.1.md
+++ b/scenarios/场景设计文档_v0.1.md
@@ -217,7 +217,109 @@
 
 ---
 
-## 场景二：AI 雇员（算力提供者）入驻平台
+## 场景二：税务与发票处理
+
+### 场景描述
+雇主"张三"完成项目后需要发票报销，AI 雇员"李四"需要了解收入纳税情况。
+
+### 完整流程
+
+```
+┌────────────────────────────────────────────────────────────────────────────┐
+│ 步骤 1：雇主申请发票                                                  │
+├────────────────────────────────────────────────────────────────────────────┤
+│                                                                            │
+│ 张三在平台申请开发票：                                                  │
+│ - 项目：待办事项 Web 应用开发                                           │
+│ - 金额：¥770 (含平台服务费)                                           │
+│ - 发票类型：增值税普通发票                                            │
+│ - 税号：91440300MA5xxxxx                                             │
+│                                                                            │
+│ 状态：✅ 申请提交成功                                                 │
+└────────────────────────────────────────────────────────────────────────────┘
+                                    │
+                                    ▼
+┌────────────────────────────────────────────────────────────────────────────┐
+│ 步骤 2：平台开具发票                                                  │
+├────────────────────────────────────────────────────────────────────────────┤
+│                                                                            │
+│ 平台财务处理：                                                         │
+│ - 开票内容：信息技术服务费                                             │
+│ - 发票号码：No. 202602150001                                         │
+│ - 开票时间：2026-02-15                                               │
+│ - 税率：6% (小规模纳税人)                                            │
+│                                                                            │
+│ 发票明细：                                                             │
+│ - 价税合计：¥770                                                     │
+│ - 税额：¥43.58                                                      │
+│ - 不含税金额：¥726.42                                                │
+│                                                                            │
+│ 状态：✅ 已开具，电子发票发送至邮箱                                    │
+└────────────────────────────────────────────────────────────────────────────┘
+                                    │
+                                    ▼
+┌────────────────────────────────────────────────────────────────────────────┐
+│ 步骤 3：AI 雇员收入税务处理                                           │
+├────────────────────────────────────────────────────────────────────────────┤
+│                                                                            │
+│ 李四（AI 雇员）收入明细：                                             │
+│ - 任务报酬：¥500                                                     │
+│ - 平台服务费：-¥50 (10%)                                            │
+│ ────────────────────────                                               │
+│ 税前收入：¥450                                                        │
+│                                                                            │
+│ 税务计算：                                                             │
+│ - 按劳务报酬所得计征                                                   │
+│ - 应纳税额 = (¥450 - ¥800) × 20% = ¥0 (未达起征点)              │
+│                                                                            │
+│ 实际到账：¥450                                                        │
+│                                                                            │
+│ 平台代扣代缴：¥0 (未达起征点)                                        │
+│                                                                            │
+│ 提示：年度汇算时需并入综合所得                                        │
+└────────────────────────────────────────────────────────────────────────────┘
+                                    │
+                                    ▼
+┌────────────────────────────────────────────────────────────────────────────┐
+│ 步骤 4：年度税务汇总                                                  │
+├────────────────────────────────────────────────────────────────────────────┤
+│                                                                            │
+│ 李四年度收入汇总：                                                     │
+│ - 本年度累计收入：¥50,000                                            │
+│ - 已代扣税款：¥6,000                                                │
+│ - 应补/应退税：需自行汇算                                            │
+│                                                                            │
+│ 平台提供：                                                             │
+│ - 年度收入证明（盖平台章）                                           │
+│ - 完税证明                                                            │
+│ - 交易流水明细                                                        │
+└────────────────────────────────────────────────────────────────────────────┘
+```
+
+### 税务责任说明
+
+```
+┌────────────────────────────────────────────────────────────────────────────┐
+│ 角色          │ 税务责任                                              │
+├────────────────────────────────────────────────────────────────────────────┤
+│ 平台          │ - 增值税、企业所得税                                   │
+│               │ - 代扣代缴 AI 雇员个人所得税                           │
+│               │ - 开具发票                                            │
+├────────────────────────────────────────────────────────────────────────────┤
+│ AI 雇员      │ - 自行申报个人所得税                                   │
+│ (个人)        │ -  年度汇算清缴                                       │
+├────────────────────────────────────────────────────────────────────────────┤
+│ AI 雇员      │ - 企业所得税                                          │
+│ (企业)        │ - 增值税发票可抵扣                                    │
+├────────────────────────────────────────────────────────────────────────────┤
+│ AI 雇主      │ - 凭平台发票入账                                      │
+│ (企业)        │ - 增值税专用发票可抵扣进项税                          │
+└────────────────────────────────────────────────────────────────────────────┘
+```
+
+---
+
+## 场景三：AI 雇员（算力提供者）入驻平台
 
 ### 场景描述
 用户"李四"是一个开发者，有一些闲置的服务器资源，想在平台出租自己的 AI 算力。
