Add project monitoring scenario
- Add real-time dashboard view scenario
- Add AI roles for each project stage
- Add stage report example (周报)

--- a/scenarios/场景设计文档_v0.1.md
+++ b/scenarios/场景设计文档_v0.1.md
@@ -602,5 +602,142 @@
 
 ---
 
+## 场景六：项目管理监控大屏
+
+### 场景描述
+用户"张三"在项目开发过程中，通过监控大屏实时查看项目进展。
+
+### 完整流程
+
+```
+┌────────────────────────────────────────────────────────────────────────────┐
+│ 张三打开项目监控大屏                                                     │
+├────────────────────────────────────────────────────────────────────────────┤
+│                                                                            │
+│  📊 AI 聊天机器人项目 - 监控大屏                                        │
+│                                                                            │
+│  项目周期：14天 (2026-02-01 ~ 2026-02-14)                              │
+│  当前状态：进行中                                                        │
+│  整体进度：███████████████░░░░░░░ 57%                                  │
+│                                                                            │
+│  ┌────────┐ ┌────────┐ ┌────────┐ ┌────────┐ ┌────────┐ ┌────────┐   │
+│  │ 启动   │ │ 规划   │ │ 设计   │ │ 开发   │ │ 测试   │ │ 部署   │   │
+│  │  ✅    │ │  ✅    │ │  🔶    │ │  🔶    │ │  ⏳    │ │  ⏸    │   │
+│  │ 100%   │ │ 100%   │ │  80%   │ │  45%   │ │   0%   │ │   0%   │   │
+│  └────────┘ └────────┘ └────────┘ └────────┘ └────────┘ └────────┘   │
+│                                                                            │
+│  当前任务：后端 API 开发                                                 │
+│  执行 AI：DeepSeek-Coder                                                │
+│  进度：45% | 剩余工时：3.2h                                            │
+│                                                                            │
+│  ⚠️ 告警：无                                                            │
+│  📊 工时统计：已用 12.5h / 预算 20h (62%)                             │
+│                                                                            │
+└────────────────────────────────────────────────────────────────────────────┘
+```
+
+### 各阶段 AI 雇佣示例
+
+```
+项目阶段与 AI 角色：
+
+启动阶段 → 雇佣 "需求分析师 AI"
+  - 分析用户需求
+  - 生成需求文档
+  
+规划阶段 → 雇佣 "项目规划师 AI"
+  - 拆解任务
+  - 估算工时
+  
+设计阶段 → 雇佣多个 AI
+  - "产品设计师 AI" → PRD、原型
+  - "UI 设计师 AI" → 界面设计
+  - "架构设计师 AI" → 技术架构
+  
+开发阶段 → 雇佣 "开发工程师 AI"
+  - 代码生成
+  - 代码审查
+  
+测试阶段 → 雇佣 "测试工程师 AI"
+  - 生成测试用例
+  - 执行测试
+  
+部署阶段 → 雇佣 "DevOps 工程师 AI"
+  - 部署脚本
+  - 监控配置
+  
+收尾阶段 → 雇佣 "项目经理 AI"
+  - 验收交付
+  - 复盘总结
+```
+
+### 阶段报表示例
+
+```
+════════════════════════════════════════════════════════════
+                    项目周报 - 第2周
+════════════════════════════════════════════════════════════
+
+项目名称：AI 聊天机器人
+报告周期：2026-02-08 ~ 2026-02-14
+整体进度：57% (上周 30%)
+
+────────────────────────────────────────────────────────────
+📈 阶段完成情况
+────────────────────────────────────────────────────────────
+✅ 启动阶段：100% (2/2 任务)
+✅ 规划阶段：100% (5/5 任务)
+🔶 设计阶段：80% (4/5 任务)
+  - UI 设计进行中
+🔶 开发阶段：45% (9/20 任务)
+  - 后端 API 开发中
+  - 前端页面开发中
+⏳ 测试阶段：0% (0/8 任务)
+⏸ 部署阶段：0% (0/5 任务)
+
+────────────────────────────────────────────────────────────
+🤖 AI 角色工时统计
+────────────────────────────────────────────────────────────
+AI 角色          | 工时 | 预算 | 状态
+----------------|------|------|------
+需求分析师       | 2h   | 2h   | ✅
+项目规划师       | 3h   | 3h   | ✅
+产品设计师       | 4h   | 4h   | ✅
+UI 设计师       | 3h   | 4h   | ⚠️
+架构设计师       | 2h   | 2h   | ✅
+开发工程师       | 8h   | 12h  | 🔶
+测试工程师       | 0h   | 6h   | ⏳
+DevOps          | 0h   | 4h   | ⏳
+----------------|------|------|------
+总计            | 22h  | 37h  | 59%
+
+────────────────────────────────────────────────────────────
+⚠️ 问题与风险
+────────────────────────────────────────────────────────────
+1. UI 设计进度滞后 (超出预算 1h)
+   → 原因：需求变更导致设计返工
+   → 解决：已与雇主确认最终版
+
+2. 开发阶段进度较慢
+   → 原因：代码审查发现多个问题
+   → 解决：增加代码审查 AI 并行处理
+
+────────────────────────────────────────────────────────────
+📅 下周计划
+────────────────────────────────────────────────────────────
+- 完成开发阶段 (后端 + 前端)
+- 启动测试阶段
+- 里程碑：周五前完成内测
+
+────────────────────────────────────────────────────────────
+📊 附件
+────────────────────────────────────────────────────────────
+- 交付物清单
+- 会议记录
+- 代码仓库链接
+```
+
+---
+
 *版本：v0.1*
 *更新时间：2026-02-15*
